# cs416-s23

./: README.md
csci416s23-pa1-ccutter270-main/: README.md
csci416s23-pa1-ccutter270-main/common/: CMakeLists.txt
csci416s23-pa1-ccutter270-main/pa1/: CMakeLists.txt  README.md  ada-submit  mandelbrot-main.cc  mandelbrot-support.cc  mandelbrot.cc  mandelbrot.h  mandelbrot.ispc  saxpy-main.cc  saxpy.ispc  sqrt-main.cc  sqrt.cc  sqrt.h  sqrt.ispc
csci416s23-pa2-ccutter270-main/: .gitattributes  .gitignore
csci416s23-pa2-ccutter270-main/pa2/: CMakeLists.txt  README.md  ada-submit  main.cc  tasksys.cc  tasksys.h
csci416s23-pa2-ccutter270-main/pa2/test/: tasks.h
csci416s23-pa3-ccutter270-main/: CMakeLists.txt
csci416s23-pa3-ccutter270-main/cmake/: FindCUB.cmake  FindOSXOpenMP.cmake
csci416s23-pa3-ccutter270-main/pa3/: CMakeLists.txt  README.md  ada-submit  cusaxpy-main.cc  evens-main.cc  evens.cu  render-main.cc  render.cc  render.cu  render.h  saxpy.cu
csci416s23-pa4-ccutter270-main/cmake/: AddISPCObject.cmake
csci416s23-pa4-ccutter270-main/pa4/: CMakeLists.txt  README.md  ada-submit  bfs.cc  bfs.h  graph-main.cc  graph.cc  graph.h  main.cc
csci416s23-pa4-ccutter270-main/pa4/test/: example_graph.txt
csci416s23-pa5-ccutter270-main/pa5/: README.md  ada-submit-cluster  ada-submit-local  pagerank.py  wordcount.py
csci416s23-pa5-ccutter270-main/pa5/test/: benchmark_graph.txt  hanselandgretel.txt  small_graph.txt  test_graph.py
